# duatic_dynaarm_driver

./: README.md  repos.list
duatic_dynaarm_controllers/src/: cartesian_pose_controller.cpp  dynaarm_pid_tuner.cpp  dynaarm_status_broadcaster.cpp  force_torque_broadcaster.cpp  force_torque_broadcaster_parameters.yaml  freedrive_controller.cpp  gravity_compensation_controller.cpp
duatic_dynaarm_driver/: CMakeLists.txt  hardware_interface_plugin.xml  package.xml
duatic_dynaarm_driver/config/baracuda12/: elbow_flexion.yaml  forearm_rotation.yaml  shoulder_flexion.yaml  shoulder_rotation.yaml  wrist_flexion.yaml  wrist_rotation.yaml
duatic_dynaarm_driver/duatic_dynaarm_driver/: CMakeLists.txt  hardware_interface_plugin.xml  package.xml
duatic_dynaarm_driver/duatic_dynaarm_driver/include/duatic_dynaarm_driver/: dynaarm_hardware_interface.hpp  dynaarm_hardware_interface_base.hpp  dynaarm_mock_hardware_interface.hpp
duatic_dynaarm_driver/duatic_dynaarm_driver/src/: dynaarm_hardware_interface.cpp  dynaarm_hardware_interface_base.cpp  dynaarm_mock_hardware_interface.cpp  kinematic_translation.cpp
duatic_dynaarm_driver/duatic_dynaarm_driver/urdf/: dynaarm.ros2control.xacro  dynaarm.urdf.xacro  dynaarm.xacro
duatic_dynaarm_driver/duatic_dynaarm_hardware_interface_base/include/duatic_dynaarm_hardware_interface_base/: types.hpp
duatic_dynaarm_driver/duatic_dynaarm_hardware_interface_base/src/: dynaarm_hardware_interface_base.cpp
duatic_dynaarm_driver/include/duatic_dynaarm_driver/: dynaarm_hardware_interface_base.hpp  kinematic_translation.hpp  types.hpp
duatic_dynaarm_driver/src/: dynaarm_hardware_interface.cpp  dynaarm_hardware_interface_mock.cpp  dynaarm_hardware_interface_real.cpp  dynaarm_mock_hardware_interface.cpp  kinematic_translation.cpp
duatic_dynaarm_driver/urdf/: dynaarm.ros2control.xacro  dynaarm.urdf.xacro
dynaarm_controllers/src/: cartesian_pose_controller.cpp  (+4 more)
(+11 files in other folders)
